--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
+* {
+  padding: none;
+  margin: none;
+  box-sizing: border-box;
+}
+
+@keyframes bganimation {
+  0% {
+    background-position: -100% -100%, 200% 200%, -100% 200%, 200% -100%;
+  }
+
+  50% {
+    background-position: 150% 100%, -200% 100%, 100% 0%, 0% 100%;
+  }
+
+  100% {
+    background-position: -100% -100%, 200% 200%, -100% 200%, 200% -100%;
+  }
+}
+
+body {
+  background-color: blueviolet;
+}
+
+.app {
+  max-width: 100vw;
+  height: 100vh;
+  background: radial-gradient(
+      ellipse at center,
+      rgba(189, 0, 0, 0.3) 0%,
+      rgba(0, 0, 0, 0) 70%
+    ),
+    radial-gradient(
+        ellipse at center,
+        rgba(0, 189, 0, 0.3) 0%,
+        rgba(0, 0, 0, 0) 70%
+      )
+      #ffffff;
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-size: 1300px 1300px, 1300px 1300px, 1300px 1300px;
+  background-attachment: fixed;
+  animation: bganimation 30s infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app--logo-wrapper {
+  max-width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app--logo-image {
+  object-fit: contain;
+  max-width: 60%;
+  vertical-align: middle;
+  margin: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app--content {
+  text-align: center;
 }
