--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,64 @@
 * {
   padding: none;
-  margin: none;
+  /* margin: auto; */
   box-sizing: border-box;
+
 }
+
+.background-w {
+  background-color: white;
+}
+
+.background-b {
+  background-color: #000;
+}
+
+.container-1 {
+padding:10px;
+margin: auto;
+width:25vw;
+text-align: center;
+}
+
+.background-container{
+  columns: 2;
+  width:100vw;
+  height:100vh;
+}
+
+.box1{
+  background-image:url('')
+}
+
+.box2{
+  background-image: url('');
+}
+
+@font-face {
+  font-family: Bebas;
+  src: url(./Fonts/BebasNeue-Regular.ttf);
+  font-weight: regular;
+}
+
+
+@font-face {
+  font-family: Righteous;
+  src: url(./Fonts/Righteous-Regular.ttf);
+  font-weight: regular;
+}
+
+@font-face {
+  font-family: FragmentMono;
+  src: url(./Fonts/FragmentMono-Regular.ttf);
+  font-weight: regular;
+}
+
+@font-face {
+  font-family: FragmentMono-i;
+  src: url(./Fonts/FragmentMono-Italic.ttf);
+  font-weight: italic;
+}
+
 
 @keyframes bganimation {
   0% {
@@ -18,8 +74,14 @@
   }
 }
 
-body {
-  background-color: blueviolet;
+.typing {
+  margin:auto;
+  width:50%;
+  text-align: center;
+  position: relative;
+  height:2rem;
+  margin-bottom: 50px;
+  z-index: 1;
 }
 
 .app {
@@ -27,22 +89,32 @@ body {
   height: 100vh;
   background: radial-gradient(
       ellipse at center,
-      rgba(189, 0, 0, 0.3) 0%,
-      rgba(0, 0, 0, 0) 70%
+      rgba(233, 233, 233, 0.3) 30%,
+      rgba(226, 5, 5, 0) 60%
     ),
     radial-gradient(
         ellipse at center,
-        rgba(0, 189, 0, 0.3) 0%,
-        rgba(0, 0, 0, 0) 70%
+        rgba(255, 255, 255, 0.94) 10%,
+        rgba(0, 0, 0, 0) 60%
       )
-      #ffffff;
+      #00000092;
   background-repeat: no-repeat, no-repeat, no-repeat;
-  background-size: 1300px 1300px, 1300px 1300px, 1300px 1300px;
+  background-size: 900px 900px, 900px 900px, 900px 900px;
   background-attachment: fixed;
   animation: bganimation 30s infinite;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.typewriter {
+  font-size: .7rem;
+  color: rgb(191, 191, 191);
+  position: relative;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: Bebas;
+  /* font-family: Righteous; */
+  font-family:FragmentMono;
 }
 
 .app--logo-wrapper {
@@ -52,11 +124,133 @@ body {
 
 .app--logo-image {
   object-fit: contain;
-  max-width: 60%;
+  width: 30rem;
   vertical-align: middle;
   margin: auto;
-}
+  opacity: .2;
+  transition: .3s;
+  }
+
+  .app--logo-image:hover {
+    opacity: .6;
+    cursor: pointer;
+  }
+
 
 .app--content {
   text-align: center;
+  width:50vw;
+  margin: auto;
 }
+
+.hidden {
+  display: none;
+}
+
+.form{
+  display: flex;
+  margin-top: ;
+  justify-content: center;
+  text-align: left;
+}
+
+.field {
+  width: 200px;
+  height: 40px;
+  padding-left: 3px;
+  float: left;
+  color: #000000;
+  text-align: left;
+  background-color: rgba(250, 250, 250, 0.093);
+  border: 0 solid #000;
+  border-radius: 0;
+  margin-bottom: 0;
+  margin-right: 3%;
+  font-family: Inconsolata, monospace;
+  font-size: 16px;
+  transition: background-color .3s, box-shadow .3s ;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .31), inset 0 2px 9px -1px rgba(0, 0, 0, .14), 0 0 0 1px rgba(255, 255, 255, .09), 0 1px rgba(255, 255, 255, .13);
+}
+
+
+.field:focus{
+  outline: none;
+  border: 1.5px solid #555
+}
+
+  .button {
+    height: 40px;
+    float: left;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px rgba(0, 0, 0, .19);
+    background-color: #20202047;
+    /* border-radius: 20px; */
+    padding: 4px 29px;
+    font-family: Inconsolata, monospace;
+    font-size: 14px;
+    font-weight: 300;
+    text-decoration: none;
+    transition: background-color .3s;
+    display: block;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .3), 0 0 0 1px rgba(0, 0, 0, .11), inset 0 0 0 1px rgba(255, 255, 255, .08), inset 0 1px rgba(255, 255, 255, .16), inset 0 -44px 38px -25px rgba(0, 0, 0, .09);
+}
+
+.button:hover{
+  cursor: pointer;
+}
+
+.paragraph{
+    font-family: Inconsolata, monospace;
+    font-size: 14px;
+    position: static;
+    letter-spacing: 0;
+    text-shadow: none;
+    margin-top: 0;
+    margin-bottom: 5px;
+    color: #fff;
+}
+
+@media screen and (max-width: 900px) {
+  .app--logo-image{
+    width: 600px;
+  }
+
+  .field{
+    /* flex-grow: 100%;  */
+    /* width:60%; */
+}}
+
+  @media screen and (max-width: 700px) {
+    .app--logo-image{
+      width: 100vw;
+    }
+
+    .typewriter{
+      font-size: .7rem;
+    }
+    .typing{
+      width:80%;
+    }
+  .form{
+    flex-wrap: wrap;
+    /* width: 80%; */
+    margin: auto;
+    
+  }
+  .field{
+    margin:5px;
+    margin-bottom: 15px;
+    width:100%;
+  }
+
+  .button {
+    width: 100%;
+  }
+
+  
+}
+
+   
