--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,30 @@
   background-color: #000;
 }
 
+.video-container{
+  position: fixed;
+}
+
+.form {
+  position: fixed;
+  bottom:100px;
+  margin-left: auto;
+  margin-right: auto;
+  width:300px;
+  justify-content: ;
+}
+
 .container-1 {
 padding:10px;
 margin: auto;
 width:25vw;
 text-align: center;
+}
+
+video {
+	margin: 30px;
+	width: 500px;
+	max-width: 85%;
 }
 
 .background-container{
@@ -26,13 +45,18 @@ text-align: center;
   height:100vh;
 }
 
-.box1{
+
+.background-video {
+  
+}
+
+/* .box1{
   background-image:url('')
 }
 
 .box2{
   background-image: url('');
-}
+} */
 
 @font-face {
   font-family: Bebas;
@@ -88,7 +112,8 @@ text-align: center;
 .app {
   max-width: 100vw;
   height: 100vh;
-  background: radial-gradient(
+   background: 
+  /* radial-gradient(
       ellipse at center,
       rgba(233, 233, 233, 0.3) 30%,
       rgba(226, 5, 5, 0) 60%
@@ -97,10 +122,10 @@ text-align: center;
         ellipse at center,
         rgba(255, 255, 255, 0.94) 10%,
         rgba(0, 0, 0, 0) 60%
-      )
-      #000000cb;
+      )  */
+      #000000;
   background-repeat: no-repeat, no-repeat, no-repeat;
-  background-size: 900px 900px, 900px 900px, 900px 900px;
+  background-size: 1200px 1200px, 1200px 1200px, 1200px 1200px;
   background-attachment: fixed;
   animation: bganimation 30s infinite;
   display: flex;
@@ -124,15 +149,15 @@ text-align: center;
 
 .app--logo-image {
   object-fit: contain;
-  width: 30rem;
+  width: 50rem;
   vertical-align: middle;
   margin: auto;
-  opacity: .2;
+  opacity: .6;
   transition: .3s;
   }
 
   .app--logo-image:hover {
-    opacity: .6;
+    opacity: 1;
     cursor: pointer;
   }
 
@@ -225,8 +250,10 @@ text-align: center;
 
   @media screen and (max-width: 700px) {
     .app--logo-image{
-      width: 100vw;
+      width: 80vw;
+      margin-bottom: 200px;
     }
+    
 
     .typing{
       width:80%;
@@ -256,5 +283,20 @@ text-align: center;
 }
 
 }
+@media screen and (max-width:430px) {
+  .app--content {
+    margin:unset;
+  }
+
+  .form {
+    display: block;
+  }
+
+  ..app--logo-image{
+    margin-bottom: 40px;
+  }
+}
+
+
 
    
