--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,46 @@
+/* Header */
+
+.logo-container {
+  height: auto;
+  /* background-color: #808080; */
+  min-width: -webkit-fill-available;
+  padding: 5px;
+
+  border-color: #808080;
+  opacity: 1;
+}
+
+.header {
+  min-height: 200px;
+  /* background-color: #808080; */
+  /* min-width: -webkit-fill-available; */
+  width: 40%;
+  border-style: solid;
+  margin: 10px;
+  margin-top: 0px;
+  border-radius: 5px;
+  border-width: 0.5px;
+  border-color: #808080;
+  padding: 15px;
+  display: inline-flex;
+  opacity: 1;
+}
+.header-nav {
+  height: 30px;
+  /* background-color: #808080; */
+  border-style: solid;
+  margin: 10px;
+  margin-top: 0px;
+
+  border-radius: 5px;
+  border-width: 0.5px;
+  border-color: #808080;
+  padding: 15px;
+  opacity: 1;
+}
+
+/* Header  End */
+
 * {
   padding: none;
   /* margin: auto; */
@@ -9,7 +52,7 @@
 }
 
 .background-b {
-  background-color: #000;
+  background-color: red;
 }
 
 .video-container {
@@ -91,22 +134,21 @@ video {
 }
 
 .typing {
-  margin-top: 15px;
-  width: 30%;
+  color: white;
+  /* width: 30%; */
   position: relative;
   font-size: 0.7rem;
-  margin-left: 10px;
   text-align: left;
   position: relative;
   z-index: 2;
-  padding-bottom: 50px;
+  color: black;
+  padding-bottom: 10px;
 }
 
 .app {
   max-width: 100vw;
   height: 100vh;
-  background: 
-  /* radial-gradient(
+  background: radial-gradient(
       ellipse at center,
       rgba(233, 233, 233, 0.3) 30%,
       rgba(226, 5, 5, 0) 60%
@@ -115,12 +157,12 @@ video {
         ellipse at center,
         rgba(255, 255, 255, 0.94) 10%,
         rgba(0, 0, 0, 0) 60%
-      )  */ #000000;
+      )
+      #000000;
   background-repeat: no-repeat, no-repeat, no-repeat;
-  background-size: 1200px 1200px, 1200px 1200px, 1200px 1200px;
+  background-size: 600px 600px, 600px 600px, 600px 600px;
   background-attachment: fixed;
   animation: bganimation 30s infinite;
-  display: flex;
   /* justify-content: center; */
   /* align-items: center; */
 }
@@ -136,16 +178,16 @@ video {
 }
 
 .app--logo-wrapper {
-  max-width: 100%;
+  width: 20px;
   text-align: center;
 }
 
 .app--logo-image {
   object-fit: contain;
-  width: 50rem;
+  width: 100px;
   vertical-align: middle;
   margin: auto;
-  opacity: 0.6;
+  opacity: 1;
   transition: 0.3s;
 }
 
